--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: "Login to Docker Hub"
-        run: docker login --username shebo280 --password dckr_pat_jgS7wxE0fE9L_hiwcKyJqs-WH2o
+        run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_TOKEN}}
