--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Login to Docker Hub"
         run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_TOKEN}}
+      - name: "Build Docker Image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME}}/Shebo1 .
+      - name: "Pushing The Image"
+        run: docker push ${{ secrets.DOCKER_USERNAME}}/Shebo1
