--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
       - name: "Login to Docker Hub"
         run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_TOKEN}}
       - name: "Build Docker Image"
-        run: docker build -t ${{ secrets.DOCKER_USERNAME}}/Shebo1 .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME}}/shebo1 .
       - name: "Pushing The Image"
-        run: docker push ${{ secrets.DOCKER_USERNAME}}/Shebo1
+        run: docker push ${{ secrets.DOCKER_USERNAME}}/shebo1
